--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           </span>
         </a>
 
-        <a href="https://github.com/abhn" class="nav-item">
+        <a href="https://github.com/catofann" class="nav-item">
           <span class="icon">
             <i class="fa fa-github" aria-hidden="true" title="Github"></i>
           </span>
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-
+<!--
           <div class="tile is-child widget">
 
             <div class="card">
@@ -114,7 +114,7 @@
             </div>
 
           </div>
-
+-->
           <div class="tile is-child widget">
             <div class="card">
               <header class="card-header">
@@ -161,6 +161,7 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
+        <!--
       <p>
         Some rights reserved.
       </p>
@@ -178,6 +179,7 @@
           <i class="fa fa-envelope" title="Email"></i>
         </a>
       </p>
+            -->
     </div>
   </div>
 </footer>
