--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,7 @@
   <div class="hero-body">
     <div class="container">
         <h1 class="title">
-          <span class="typewrite" data-period="2000" data-type='[ "hello", "namaste", "assalam o alaikum",
-          "sat srī akāl", "khammaghani", "hola", "bonjour", "nomoskaar", "guten tag", "kumusta", "salut", "nômoshkar"]'>
+          <span class="typewrite" data-period="2000" data-type='[ "hello", "welcome"]'>
             <span class="wrap"></span>
           </span>
         </h1>
@@ -119,29 +118,23 @@
             <div class="card">
               <header class="card-header">
                 <p class="card-header-title nice-title">
-                  Recommended Websites
+                  Link
                 </p>
               </header>
               <div class="card-content">
                 <div class="content nice-text">
                   <ul>
                     <li>
-                      <a href="https://xkcd.com">xkcd</a>
+                      <a href="https://www.google.com/">Google</a>
                     </li>
                     <li>
-                      <a href="http://commitstrip.com">Commit Strip</a>
+                      <a href="https://www.wikipedia.org/">Wiki</a>
                     </li>
                     <li>
-                      <a href="http://www.smbc-comics.com">SMBC Comics</a>
+                      <a href="https://github.com/">Github</a>
                     </li>
                     <li>
-                      <a href="https://blog.codinghorror.com">Coding Horror</a>
-                    </li>
-                    <li>
-                      <a href="http://waitbutwhy.com">Wait Buy Why</a>
-                    </li>
-                    <li>
-                      <a href="https://simplysoch.wordpress.com/">Simply Soch</a>
+                      <a href="https://www.quora.com/">Quora</a>
                     </li>
                   </ul>
                 </div>
@@ -161,25 +154,7 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-        <!--
-      <p>
-        Some rights reserved.
-      </p>
-      <p>
-        Made with <i class="fa fa-heart"></i> and <a href="https://github.com/jgthms/bulma">Bulma</a>, <a href="https://jekyllrb.com/">Jekyll</a>. Hosted on <a href="https://github.com/">Github</a>
-      </p>
-      <p>
-        <a class="icon" href="https://github.com/abhn">
-          <i class="fa fa-github" title="Github"></i>
-        </a>
-        <a class="icon" href="https://in.linkedin.com/in/AbhishekNagekar">
-          <i class="fa fa-linkedin" title="Linkedin"></i>
-        </a>
-        <a class="icon" href="mailto:abhishek@nagekar.com">
-          <i class="fa fa-envelope" title="Email"></i>
-        </a>
-      </p>
-            -->
+
     </div>
   </div>
 </footer>
