--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           </span>
         </a>
 
-        <a href="https://github.com/catofann" class="nav-item">
+        <a href="https://github.com" class="nav-item">
           <span class="icon">
             <i class="fa fa-github" aria-hidden="true" title="Github"></i>
           </span>
