--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <div class="nav-item" id="searchFieldNav">
           <div class="field has-addons">
             <p class="control">
-              <input class="input is-small" type="text" placeholder="Find an article" id="search-text">
+              <input class="input is-small" type="text" placeholder="Search with google" id="search-text">
             </p>
             <p class="control">
               <a class="button is-dark is-small" onclick="searchHandler();">
