--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
                 <div class="content nice-text">
                   <ul>
                   {% for post in site.posts limit:3 %}
-                  <li><a href="{{ post.url | relative_url }}">
+                  <li><a href="{{ post.url | "/Catofann" |relative_url }}">
                     {{ post.title }}
                   </a></li>
                   {% endfor %}
