--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,8 @@
                   {% for post in site.posts limit:3 %}
                   <li><a href="{{ post.url | {"/Catofann"+relative_url} }}">
                     {{ post.title }}
+                    {{post.url}}
+                    {{relative_url}}
                   </a></li>
                   {% endfor %}
                   </ul>
